# mpv-danmaku

./: .gitignore  Cargo.toml  flake.nix
.github/: renovate.json
.github/workflows/: build.yml  checks.yml
src/: dandanplay.rs  lib.rs  options.rs  service.rs
